fixed IE  backface issue, made blogs flippers with custom thumbnail loading. need to fix main page text not showing.

--- a/app/assets/stylesheets/styles/flip.scss
+++ b/app/assets/stylesheets/styles/flip.scss
@@ -36,9 +36,9 @@
 }
 
 #blogflip{
-	@include flip-container(inherit, 30%);
+	@include flip-container(20%, 20%);
 	position: relative;
-
+	margin: 30px;
 	.flip, .front, .back {
 		@include flip-front-back(1s);
 	}
